--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "webhook-echo-sample",
   "version": "1.0.0",
   "description": "Webhook echo sample",
-  "main": "index.js",
+  "main": "echo.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node echo.js"
   },
-  "author": "Sunil Syal",
+  "author": "Aditya Gupta",
   "dependencies": {
     "body-parser": "^1.15.0",
     "express": "^4.13.4"
