--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "name": "Webhook-echo-sample",
   "description": "Webhook echo sample",
-  "repository": "https://github.com/adityag2010/echobot.git",
+  "repository": "https://github.com/adiiityag2010/echobot.git",
   "keywords": ["api.ai", "natural language"]
 }
