--- a/package.json
+++ b/package.json
@@ -1,7 +1,4 @@
 {
   "name": "webhook-echo-sample",
-  "description": "Webhook echo sample",
-  "scripts": {
-    "start": "node echo.js"
-  }
+  "description": "Webhook echo sample"
 }
