--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
   "name": "webhook-echo-sample",
-  "description": "Webhook echo sample"
+  "description": "Webhook echo sample",
+  "scripts": {
+    "start": "node index.js"
+  }
 }
